--- a/vercel.json
+++ b/vercel.json
@@ -20,8 +20,8 @@
       "dest": "/api/main.py"  
     },
     {
-      "src": "/(.*)",           
-      "dest": "src/$1"
+      "src": "/api/articles/(.*)",           
+      "dest": "src/app/api/articles/$1"
     }
   ]
 }
