--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
         "maxLambdaSize": "15mb",
         "runtime": "python3.9"  
       }
+    },
+    {
+      "src": "next.config.js",
+      "use": "@vercel/next"
     }
   ],
   "routes": [
@@ -18,10 +22,6 @@
     {
       "src": "/api/articles/(.*)",           
       "dest": "/src/app/api/articles/$1"
-    },
-    {
-      "src": "",
-      "dest": "/src/app"
     }
   ]
 }
