--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,24 @@
 {
   "version": 2,
+  "framework": "nextjs",
   "builds": [
     {
-      "src": "/package.json", 
+      "src": "package.json",
       "use": "@vercel/next"
     },
     {
-      "src": "/api/*.py", 
+      "src": "api/*.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/api/blogs/(.*)",
-      "dest": "/api/main.py" 
+      "dest": "api/main.py"
     },
     {
       "src": "/(.*)",
-      "dest": "/$1" 
+      "dest": "/$1"
     }
   ]
 }
