--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,12 @@
     {
       "src": "/api/blogs/(.*)",
       "dest": "api/main.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
     }
-  ]
+  ],
+  "buildCommand": "cd src && npm run build",
+  "outputDirectory": "src/.next"
 }
