--- a/vercel.json
+++ b/vercel.json
@@ -3,22 +3,14 @@
   "framework": "nextjs",
   "builds": [
     {
-      "src": "package.json",
-      "use": "@vercel/next"
-    },
-    {
       "src": "api/*.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
-      "src": "/api/blogs/(.*)",
+      "src": "/api/python/(.*)",
       "dest": "api/main.py"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
     }
   ]
 }
