--- a/vercel.json
+++ b/vercel.json
@@ -5,12 +5,16 @@
     {
       "src": "api/*.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "/package.json", 
+      "use": "@vercel/next"
     }
   ],
   "routes": [
     {
       "src": "/api/python/(.*)",
-      "dest": "api/main.py"
+      "dest": "/api/articles/$1"
     }
   ]
 }
